# internet_shop

./: .env.sample  README.md  data.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_product_category.py  0004_alter_category_description_and_more.py
catalog/static/css/: my.css
catalog/templates/catalog/: base.html  category_list.html  contacts.html  feedback_form.html  index.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html  product_confirm_delete.html  product_create.html  product_detail.html  product_form.html  product_list.html  products.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/templates/users/: code.html  login.html  register.html  user_form.html
