[tool.poetry]
name = "internet-shop"
version = "0.1.0"
description = ""
authors = ["Zubarev Alexandr"]
readme = "README.md"
packages = [{include = "internet_shop"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
